--- a/public/assets/css/layout/_l-layout.less
+++ b/public/assets/css/layout/_l-layout.less
@@ -30,6 +30,9 @@
 }
 
 .graphs {
-    background: @dividerColor;
+
     height: 200px;
+        border: 1px solid @dividerColor;
+    background: @white2;
+
 }
