--- a/public/components/GeckoDetail/GeckoDetailTemplate.htm
+++ b/public/components/GeckoDetail/GeckoDetailTemplate.htm
@@ -32,15 +32,15 @@
                 </span>
 
                 <span class="fixed-action-buttons">
-                <i class="material-icons link" ng-click="triggerEditMode()" title="Enter edit mode">mode_edit</i>
-                <i class="material-icons link" ng-click="deleteGecko(geckoDetail._id,geckoDetail.name)" title="Delete this gecko">delete</i>
+                <i class="material-icons link" ng-click="triggerEditMode()" ng-hide="collaspe" title="Enter edit mode">mode_edit</i>
+                <i class="material-icons link" ng-click="deleteGecko(geckoDetail._id,geckoDetail.name)" ng-hide="collaspe" title="Delete this gecko">delete</i>
                 <a href="" ng-click="collaspe=!collaspe">
                     <span ng-hide="collaspe"><i class="material-icons">expand_less</i></span>
                 <span ng-show="collaspe"><i class="material-icons">expand_more</i></span>
                 </a>
                 </span>
             </div>
-            <div class="gecko-detail-container grid">
+            <div class="gecko-detail-container grid" ng-hide="collaspe">
                 <div class="row">
                     <div class="col-1-3">
                         <label>Morph</label>
@@ -135,7 +135,7 @@
                 </div>
             </div>
         </div>
-        <div class="detail-thumbnail-container col-1-4">
+        <div class="detail-thumbnail-container col-1-4" ng-hide="collaspe">
             <img class="detail-thumbnail" src="http://natgeo.petsmart.com/content/img/leopard-gecko/leopard-gecko-fun-facts.jpg">
         </div>
     </form>
