Removed "GO BACK" text for home FAB.

--- a/public/views/GeckoDetailsView/GeckoDetailsViewTemplate.htm
+++ b/public/views/GeckoDetailsView/GeckoDetailsViewTemplate.htm
@@ -1,7 +1,7 @@
 <!-- CONTAINER FOR GECKO INFORMATION -->
 <div>
     <div class='status-bar'>
-        <a href="/"><i class="material-icons">home</i>GO BACK</a>
+        <a href="/"><i class="material-icons">home</i></a>
     </div>
     <gecko-detail gecko-id="geckoDetail._id"></gecko-detail>
     <div class="graphs">Graphs will be here</div>
