--- a/public/assets/css/layout/_l-grid.less
+++ b/public/assets/css/layout/_l-grid.less
@@ -23,9 +23,10 @@
 }
 
 .row {
-    padding-bottom: 20px;
+    margin-bottom: 20px;
     width: 100%;
     clear: both;
+    display: inline-block;
 }
 
 
