--- a/public/assets/css/modules/_gecko.less
+++ b/public/assets/css/modules/_gecko.less
@@ -125,7 +125,8 @@
 
 .form-feedback {
     color: @accentColor;
-    border-top: solid 1px @dividerColor;
+    padding: 20px;
+    font-size: 12px;
 }
 
 .gecko-detail-container {
