--- a/public/components/AddGeckoForm/AddGeckoFormTemplate.htm
+++ b/public/components/AddGeckoForm/AddGeckoFormTemplate.htm
@@ -79,23 +79,18 @@
                     </div>
                     <!-- TODO: remove unnecessary parent picker buttons and but notes at bottom -->
                     <div class="row">
-                        <div class="col-2-3">
-                            <label>Notes</label>
-                            <input type="textarea" rows="1" cols="50" ng-model="form.notes">
-                        </div>
-
-                        <div class="col-1-3">
-                            <button ng-click="submitForm()">Add Gecko</button>
-                            <button ng-click="showForm=false" class="button--secondary">Cancel</button>
-                        </div>
+                        <label>Notes</label>
+                        <input type="textarea" rows="1" cols="50" ng-model="form.notes">
                     </div>
+                    <div class="row right">
+                        <button ng-click="submitForm()">Add Gecko</button>
+                        <button ng-click="showForm=false" class="button--secondary">Cancel</button>
+                    </div>
+                </div>
             </form>
-            <div class="form-feedback">
-                <p>{{validationMsg}}</p>
-            </div>
-            </div>
         </div>
     </div>
+</div>
 
     <!-- PARENT PICKER MODAL -->
     <!-- TODO: add ability to close modal by clicking outside of it -->
