--- a/public/assets/css/layout/_l-layout.less
+++ b/public/assets/css/layout/_l-layout.less
@@ -26,8 +26,12 @@
 
 .graphs {
 
-    height: 200px;
+    min-height: 200px;
         border: 1px solid @dividerColor;
     background: @white3;
 
+}
+
+#weight, #other {
+    width: 50%;
 }
