--- a/public/views/GeckoDetailsView/GeckoDetailsViewTemplate.htm
+++ b/public/views/GeckoDetailsView/GeckoDetailsViewTemplate.htm
@@ -4,6 +4,8 @@
         <a href="/"><i class="material-icons">home</i></a>
     </div>
     <gecko-detail gecko-id="geckoDetail._id"></gecko-detail>
-    <div class="graphs">Graphs will be here</div>
+    <div class="graphs">
+    <weight-chart gecko-id="geckoId"></weight-chart>
+    </div>
     <events-table gecko-id="geckoDetail._id"></events-table>
 </div>
