--- a/public/components/EventsTable/EventsTableTemplate.htm
+++ b/public/components/EventsTable/EventsTableTemplate.htm
@@ -80,4 +80,6 @@
 			<button ng-click='addEvent()'>Add Event</button>
 		</div>
 	</div>
+
+	<add-event-form ng-if='testShowIt'></add-event-form>
 </div>
