--- a/public/views/DashboardView/DashboardViewTemplate.htm
+++ b/public/views/DashboardView/DashboardViewTemplate.htm
@@ -18,3 +18,4 @@
     </div>
     <!--<egg-table></egg-table> -->
 </div>
+<gecko-picker show='testShowPicker' gender-filter='male' on-select="testGeckoSelected(gecko)"></gecko-picker>
