--- a/public/assets/css/index.less
+++ b/public/assets/css/index.less
@@ -10,8 +10,10 @@
 @import "layout/_l-layout.less";
 @import "lib/_font-awesome.less";
 
+@import "modules/_add-event-form.less";
 @import "modules/_event-table.less";
 @import "modules/_gecko.less";
+@import "modules/_gecko-picker.less";
 @import "modules/_header.less";
 @import "modules/_metrics.less";
 
