--- a/public/components/EventsTable/EventsTableTemplate.htm
+++ b/public/components/EventsTable/EventsTableTemplate.htm
@@ -56,6 +56,7 @@
 				<option value='purchase'>Purchased</option>
 				<option value='death'>Died</option>
 				<option value='clutch'>Laid Clutch</option>
+				<option value='copulate'>Copulation</option>
 				<option value='weight'>Weighed</option>
 				<option value='shed'>Shed</option>
 				<option value='note'>Note</option>
