--- a/public/components/GeckoDetail/GeckoDetailTemplate.htm
+++ b/public/components/GeckoDetail/GeckoDetailTemplate.htm
@@ -135,7 +135,7 @@
                 </div>
             </div>
         </div>
-        <div class="detail-thumbnail-container col-1-4" ng-hide="collaspe">
+        <div class="detail-thumbnail-container col-1-4" ng-hide="collaspe" style='display: none'>
             <img class="detail-thumbnail" src="http://natgeo.petsmart.com/content/img/leopard-gecko/leopard-gecko-fun-facts.jpg">
         </div>
     </form>
