Added angular-modal-service to handle the GeckoPicker modal, added Modal directive, fixed some small issues

--- a/public/assets/css/layout/_l-layout.less
+++ b/public/assets/css/layout/_l-layout.less
@@ -5,11 +5,13 @@
 .side-bar {
     .flex-container;
     flex-direction: column;
-    background: @superLightPrimary;
+	background: transparent;
     z-index: 2;
-    border-right: 1px solid @dividerColor;
-    border-bottom: 1px solid @dividerColor;
+    //border-right: 1px solid @dividerColor;
+    //border-bottom: 1px solid @dividerColor;
     min-width: 200px;
+	padding: 10px;
+	color: #a0a0a0;
 }
 
 
