--- a/public/components/GeckoPicker/GeckoPickerTemplate.htm
+++ b/public/components/GeckoPicker/GeckoPickerTemplate.htm
@@ -1,7 +1,8 @@
 <!-- TODO: add ability to close modal by clicking outside of it -->
-<div class='gecko-picker' ng-if='show'>
+<div class='gecko-picker' modal>
+	<!--
 <div ng-show='true || parentModal.shown' class="modal-black-out">
-	<div ng-show='true || parentModal.shown' class='modal_'>
+	<div ng-show='true || parentModal.shown' class='modal_'>-->
 		<div class="picker-title">Choose a Gecko</div>
 
 		<!-- Search box -->
@@ -74,6 +75,6 @@
 		<div class='picker-action-buttons'>
 			<button ng-click="cancelSelection()">Close</button>
 		</div>
-	</div>
-</div>
+	<!--</div>
+</div>-->
 </div>
