--- a/public/views/DashboardView/DashboardViewTemplate.htm
+++ b/public/views/DashboardView/DashboardViewTemplate.htm
@@ -18,4 +18,6 @@
     </div>
     <!--<egg-table></egg-table> -->
 </div>
+
+<div ng-click="showTestModal()">CLICK ME</div>
 <gecko-picker show='testShowPicker' gender-filter='male' on-select="testGeckoSelected(gecko)"></gecko-picker>
