--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -591,16 +591,7 @@ label {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 10;
-}
-.modal:before {
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.75);
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 10;
+  z-index: 8;
 }
 /* alignment */
 .right {
@@ -705,21 +696,15 @@ label {
 .side-bar {
   display: flex;
   flex-direction: column;
-  background: #F1F8E9;
+  background: transparent;
   z-index: 2;
-  border-right: 1px solid #BDBDBD;
-  border-bottom: 1px solid #BDBDBD;
   min-width: 200px;
+  padding: 10px;
+  color: #a0a0a0;
 }
 .dashboard-main-container {
   display: flex;
   flex-direction: column;
-}
-.gecko-detail-card,
-.events-table {
-  border-right: 1px solid #BDBDBD;
-  border-bottom: 1px solid #BDBDBD;
-  flex: 1 1 50%;
 }
 .gecko-detail-card {
   border-bottom: 1px solid #BDBDBD;
@@ -3416,9 +3401,6 @@ label {
 .detail-item {
   flex: 1 1 100px;
 }
-.thumbnail:hover {
-  border: solid 3px #8BC34A;
-}
 .detail-item-2 {
   flex: 2 0 200px;
 }
@@ -3447,10 +3429,24 @@ label {
 }
 .form-feedback {
   color: #536DFE;
-  border-top: solid 1px #BDBDBD;
+  padding: 20px;
+  font-size: 12px;
 }
-.green {
-  color: #8BC34A;
+.gecko-detail-container {
+  display: flex;
+  border-top: 1px solid #DCEDC8;
+  flex-wrap: wrap;
+  align-content: stretch;
+}
+.collaspe-gecko-detail {
+  height: 55px;
+  background: #fafafa;
+}
+.collaspe-gecko-detail .detail-name,
+.collaspe-gecko-detail .detail-gender,
+.collaspe-gecko-detail .detail-id {
+  font-size: 14px;
+  line-height: 14px;
 }
 .gecko-picker .modal-black-out {
   width: 100%;
@@ -3537,18 +3533,17 @@ label {
   background: #689F38;
   color: #FFFFFF;
   padding: 5px 10px;
-  font-size: 2.5em;
+  font-size: 1.5em;
 }
 .status-bar {
   background: #8BC34A;
   color: #FFFFFF;
-  height: 35px;
+  height: 25px;
   line-height: 35px;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 }
 .gecko-metrics {
   background: white;
-  border-bottom: 1px solid #BDBDBD;
   display: flex;
   padding: 15px;
   color: #00c000;
