--- a/public/assets/css/base/_b-base.less
+++ b/public/assets/css/base/_b-base.less
@@ -1,4 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,300,500,700);
+
 * {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -16,27 +17,8 @@ a:hover:not(.link--nohover),
     color: @accentColor;
 }
 
-button, .button-primary {
-    padding: 8px 10px;
-    margin-top: 12px;
-    background: @accentColor;
-    font-weight: bold;
-    color: @textColorLight;
-    border: 0;
-    .material-shadow;
-    cursor: pointer;
-    text-transform: uppercase;
-    transition: all 0.5s;
-    .round-corner;
-    &:hover {
-        background: lighten(@accentColor, 10%);
-        .material-shadow--hover;
-    }
-}
-
 body {
     background: white;
-    background-repeat: repeat;
     font-family: "Roboto", sans-serif;
     margin: 0;
 }
@@ -91,7 +73,8 @@ th {
     text-align: left;
 }
 
-th,thead {
+th,
+thead {
     color: @textColorGray;
     .font-size-default;
     .bold;
