--- a/public/assets/css/base/_b-elements.less
+++ b/public/assets/css/base/_b-elements.less
@@ -1,18 +1,24 @@
 /* Elements related to material design and cards */
 
+
 /* Used for cards and buttons */
+
 .material-shadow {
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 }
 
+
 /* Used on hoverover of buttons */
+
 .material-shadow--hover {
-    box-shadow: 0 5px 11px 0 rgba(0,0,0,0.18),0 4px 15px 0 rgba(0,0,0,0.15);
+    box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
 }
 
+
 /* used for chips */
+
 .material-shadow--light {
-        box-shadow: 0 1px 3px 0 rgba(0,0,0,.2),0 1px 1px 0 rgba(0,0,0,.14),0 2px 1px -1px rgba(0,0,0,.12);
+    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, .2), 0 1px 1px 0 rgba(0, 0, 0, .14), 0 2px 1px -1px rgba(0, 0, 0, .12);
 }
 
 .round-corner {
@@ -32,13 +38,9 @@
 /* Elements related to tables */
 
 .table-top {
-
     min-height: 50px;
     position: relative;
-
-
 }
-
 
 .table-scroll thead {
     display: table;
@@ -64,9 +66,12 @@
     height: 50px; // needed in order to keep rows from collapsing
 }
 
+
 /* Input Stuff */
 
+
 /*Secondary button */
+
 .button--secondary {
     background: @primaryColor;
     font-weight: normal;
@@ -89,3 +94,21 @@ input .inline {
     top: 5px;
 }
 
+button,
+.button-primary {
+    padding: 8px 10px;
+    margin-top: 12px;
+    background: @accentColor;
+    font-weight: bold;
+    color: @textColorLight;
+    border: 0;
+    .material-shadow;
+    cursor: pointer;
+    text-transform: uppercase;
+    transition: all 0.5s;
+    .round-corner;
+    &:hover {
+        background: lighten(@accentColor, 10%);
+        .material-shadow--hover;
+    }
+}
