Initial modal code

--- a/public/assets/css/index.less
+++ b/public/assets/css/index.less
@@ -17,3 +17,4 @@
 @import "modules/_header.less";
 @import "modules/_metrics.less";
 @import "modules/_photo-gallery.less";
+@import "modules/_modal.less";
