--- a/public/assets/css/modules/_add-event-form.less
+++ b/public/assets/css/modules/_add-event-form.less
@@ -1,5 +1,6 @@
 .add-event-form {
 	// TODO Integrate this with base styles
+	/*
 	.modal-black-out{
 		width: 100%;
 		height: 100%;
@@ -23,7 +24,9 @@
 			background-color: rgba(0,0,0,0.75);
 		}
 	}
+	*/
 	
+	/*
 	.modal_ {
 		background: white;
 		border-radius: 3px;
@@ -32,7 +35,6 @@
 		
 		animation: drop 0.5s 1;
 	}
-	
 	@keyframes drop {
 		0% {
 			margin-top: -1000px;
@@ -41,6 +43,7 @@
 			margin-top: 0;
 		}
 	}
+	*/
 	
 	.add-event-title {
 		font-size: 20px;
