changed class .fixed-action-buttons to .button--fab

--- a/public/components/GeckoDetail/GeckoDetailTemplate.htm
+++ b/public/components/GeckoDetail/GeckoDetailTemplate.htm
@@ -31,7 +31,7 @@
                 </span>
                 </span>
 
-                <span class="fixed-action-buttons">
+                <span class="button--fab">
                 <i class="material-icons link" ng-click="triggerEditMode()" ng-hide="collaspe" title="Enter edit mode">mode_edit</i>
                 <i class="material-icons link" ng-click="deleteGecko(geckoDetail._id,geckoDetail.name)" ng-hide="collaspe" title="Delete this gecko">delete</i>
                 <a href="" ng-click="collaspe=!collaspe">
