--- a/public/components/GeckoTable/GeckoTableTemplate.htm
+++ b/public/components/GeckoTable/GeckoTableTemplate.htm
@@ -6,7 +6,7 @@
              <input type="text" class="search-box inline" placeholder="Search List of Geckos" ng-model="searchTerm">
 
 
-        <div class="fixed-action-buttons">
+        <div class="button--fab">
                     <a href="" ng-click="showForm = !showForm" class="add-gecko-button">
              <i class="material-icons" title="add new gecko">add_circle_outline</i>
             </a>
