--- a/public/assets/css/base/_b-elements.less
+++ b/public/assets/css/base/_b-elements.less
@@ -88,7 +88,7 @@ input .inline {
     background: pink;
 }
 
-.fixed-action-buttons {
+.button--fab {
     position: absolute;
     right: 5px;
     top: 5px;
